# Mainstay

./: .gitignore  Cargo.toml
contracts/asset-registry/: Cargo.toml
contracts/asset-registry/src/: lib.rs
contracts/asset/src/: lifecycle_score_tests.rs  ttl_tests.rs
contracts/engineer-registry/src/: lib.rs
contracts/engineer/src/: ttl_tests.rs
contracts/lending/: Cargo.toml
contracts/lending/src/: lib.rs
contracts/lending/tests/: integration_tests.rs  test_set_min_stake.rs  test_voucher_history.rs
contracts/lifecycle/src/: lib.rs
contracts/maintenance/src/: ttl_tests.rs
docs/: access-control.md  architecture.md  collateral-scoring.md  deployment-runbook.md
tests/: Cargo.toml  test_admin_transfer.rs  test_emergency_pause.rs  test_lending_features.rs  test_loan_deadline.rs
