[package]
name = "cross-platform-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
asset-registry = { path = "../contracts/asset-registry" }
engineer-registry = { path = "../contracts/engineer-registry" }
lifecycle = { path = "../contracts/lifecycle" }
lending = { path = "../contracts/lending" }
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[[test]]
name = "cross_platform_tests"
path = "cross_platform_tests.rs"

[[test]]
name = "test_full_lifecycle_e2e"
path = "test_full_lifecycle_e2e.rs"

[[test]]
name = "test_lending_features"
path = "test_lending_features.rs"

[[test]]
name = "test_loan_deadline"
path = "test_loan_deadline.rs"

[[test]]
name = "test_emergency_pause"
path = "test_emergency_pause.rs"

[[test]]
name = "test_admin_transfer"
path = "test_admin_transfer.rs"
